--- a/package.json
+++ b/package.json
@@ -1,15 +1,15 @@
 {
-  "version": "0.45.0",
-  "name": "language-c",
+  "version": "0.0.1",
+  "name": "language-cpp",
   "description": "Atom language support for C/C++",
-  "homepage": "https://atom.github.io/language-c",
+  "homepage": "https://github.com/lczech/language-cpp",
   "repository": {
     "type": "git",
-    "url": "https://github.com/atom/language-c.git"
+    "url": "https://github.com/lczech/language-cpp.git"
   },
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/atom/language-c/issues"
+    "url": "https://github.com/lczech/language-cpp.git"
   },
   "engines": {
     "atom": "*",
